sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:8: error: value ! is not a member of Boolean
    while (j>0 !plusPetitQue(j-1,v)) {
               ^