sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var a:Int=0;
  var v:Int = 0;
  for (i<- 1 to getNombreValeurs -1) {
    v=getValeur(i);
    var j:Int=i;
    while (j>0 !plusPetitQue(j-1,v)) {
      copie(j-1,j);
      j=j-1
    }
  setValeur(j,v)}}